--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -5,104 +5,99 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
-
+ 
 .titulo {
     font-family: var(--fonte-secundaria);
     font-size: 4rem;
     margin-top: 4.875rem;
     margin-bottom: 2rem;
 }
-
+ 
 .paragrafo {
     font-family: var(--fonte-secundaria);
     font-size: 1.5rem;
     line-height: 2rem;
     margin-bottom: 2rem;
 }
-
+ 
 .imagens {
     position: relative;
     height: 406px;
-    justify-content: center;
 }
-
+ 
 .imagens > .minhaFoto {
-    border: 1px solid white;
     position: absolute;
     right: 0;
-    top: 150px;
-    width: 15vw;
+    bottom: 0;
+    width: 18vw;
     border-radius: 50%;
-    overflow: hidden;
 }
-
+ 
 .imagens > .circuloColorido {
-    position: relative;
-    top: -10px;
-    left: 7vw;
+    position: absolute;
+    right: 7vw;
     width: 25vw;
 }
-
+ 
 @media (max-width: 1100px) {    
     .banner {
         padding: 3.5rem 1.5rem;
     }
-
+ 
     .titulo {
         margin-top: 0;
         margin-bottom: 1.5rem;
     }
-
+ 
     .paragrafo {
         margin-bottom: 1.5rem;
     }
-
+ 
     .imagens {
         height: 338px;
     }
-
+   
     .imagens > .minhaFoto {
-        width: 15vw;
+        width: 25vw;
     }
-
+   
     .imagens > .circuloColorido {
         right: 10vw;
-        width: 67%;
+        width: 35vw;
     }
 }
-
+ 
 @media (max-width: 744px) {
     .banner {
         padding: 2rem 1rem;
         display: block;
     }
-
+ 
     .titulo {
         margin-bottom: 2rem;
     }
-
+ 
     .paragrafo {
         margin-bottom: 2rem;
     }
-
+ 
     .imagens {
-        display: flex;
         height: 307px;
     }
-
+ 
     .imagens > .minhaFoto, .imagens > .circuloColorido {
         left: 0;
         right: 0;
         margin: 0 auto;
     }
-
+   
     .imagens > .minhaFoto {
         width: 170px;
         transform: translate(5rem, 0px);
     }
-
+   
     .imagens > .circuloColorido {
-        max-width: 326px;
+        width: 240px;
         transform: translate(-1.5rem, 0px);
     }
 }
