--- a/src/components/PostCard/Post.module.css
+++ b/src/components/PostCard/Post.module.css
@@ -1,11 +1,15 @@
 .post {
     text-align: center;
     width: 282px;
+    height: 336px;
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.08);
     border-radius: 0px 0px 10px 10px;
     padding-bottom: 1.5rem;
     transition: transform .2s;
+    z-index: 9999;
+    
 }
+
 
 .post:hover {
     transform: translate(0, -1rem);
@@ -23,32 +27,15 @@
     margin: 1.5rem 0 1.75rem;
 }
 
-.botaoLer {
-    display: inline-block;
-    border-radius: 24px;
-    padding: 0.75rem 1.5rem;
-    font-size: 1.125rem;
-    line-height: 1.125rem;
-    background-color: var(--azul-medio);
-    color: var(--branco);
-    border: 3px solid var(--azul-medio);
-    cursor: pointer;
-    transition: 0.2s
-}
-
-.botaoLer:hover {
-    border: 3px solid var(--azul-escuro);
-}
-
 @media (max-width: 1100px) {
     .post {
         width: 336px;
+        margin: 42px 0px;
     }
     .titulo {
         font-weight: 600;
-    }
-    .botaoLer {
-        padding: 0.6875rem 1.5rem;
-        font-size: 1.375rem;
+        font-size: larger;
+        width: 100%;
+        overflow: hidden;
     }
 }
